# clarus-deliverable

./: README.md  compose.dev.yml  compose.yml
services/llm-caller-service/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test_main.py
services/rule-based-service/: README.md  main.py  models.py  pyproject.toml
services/rule-based-service/absolute_terms/: absolute_terms.py  absolute_terms_cs.json  absolute_terms_cs_lemmas.json  absolute_terms_el.json  absolute_terms_el_lemmas.json  absolute_terms_el_patterns.json  absolute_terms_en.json  absolute_terms_fi.json  absolute_terms_fi_lemmas.json  absolute_terms_pt.json  absolute_terms_pt_patterns.json
services/rule-based-service/capitalisation/: capitalisation.py
services/rule-based-service/charged_semantic_fields/: charged_semantic_fields.py  charged_semantic_fields_cs.json  charged_semantic_fields_cs_lemmas.json  charged_semantic_fields_el.json  charged_semantic_fields_el_lemmas.json  charged_semantic_fields_el_patterns.json  charged_semantic_fields_en.json  charged_semantic_fields_fi.json  charged_semantic_fields_fi_lemmas.json  charged_semantic_fields_pt.json  charged_semantic_fields_pt_patterns.json
services/rule-based-service/concessive_connectives/: concessive_connectives.py  concessive_connectives_cs.json  concessive_connectives_cs_lemmas.json  concessive_connectives_el.json  concessive_connectives_el_lemmas.json  concessive_connectives_el_patterns.json  concessive_connectives_en.json  concessive_connectives_fi.json  concessive_connectives_fi_lemmas.json  concessive_connectives_pt.json  (+1 more)
(+314 files in other folders)
