[project]
name = "llm-caller-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "httpx>=0.25.0",
    "uvicorn>=0.25.0",
    "openai>=2.6.0",
]

[dependency-groups]
dev = [
    "pydantic>=2.5.2", 
    "pytest>=8.4.2", 
    "pytest-asyncio>=1.1.0"
]
